--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@slise/embed-react": "^2.2.0",
     "@tanstack/react-query": "^5.4.3",
     "@tanstack/react-query-devtools": "^5.4.3",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/papaparse": "^5.3.5",
     "@types/react-scroll": "^1.8.4",
     "@web3modal/wagmi": "3.5.0",
@@ -63,12 +64,14 @@
     "dappscout-iframe": "^0.1.0",
     "dayjs": "^1.11.5",
     "dom-to-image": "^2.6.0",
+    "formik": "^2.4.5",
     "framer-motion": "^6.5.1",
     "gradient-avatar": "^1.0.2",
     "graphiql": "^2.2.0",
     "graphql": "^16.8.1",
     "graphql-ws": "^5.11.3",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.0.0",
     "mixpanel-browser": "^2.47.0",
     "monaco-editor": "^0.34.1",
@@ -118,11 +121,9 @@
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/swagger-ui-react": "^4.11.0",
     "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@vitejs/plugin-react": "^4.0.0",
     "css-loader": "^6.7.3",
     "dotenv-cli": "^6.0.0",
-    "eslint": "^8.32.0",
     "eslint-config-next": "13.3.0",
     "eslint-plugin-es5": "^1.5.0",
     "eslint-plugin-import-helpers": "^1.2.1",
