--- a/package.json
+++ b/package.json
@@ -121,15 +121,19 @@
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/swagger-ui-react": "^4.11.0",
     "@types/ws": "^8.5.3",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-react": "^4.0.0",
     "css-loader": "^6.7.3",
     "dotenv-cli": "^6.0.0",
+    "eslint": "^8.56.0",
     "eslint-config-next": "13.3.0",
     "eslint-plugin-es5": "^1.5.0",
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-jest": "^27.1.6",
     "eslint-plugin-no-cyrillic-string": "^1.0.5",
     "eslint-plugin-playwright": "^0.11.2",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-regexp": "^1.7.0",
     "husky": "^8.0.0",
     "jest": "^29.2.1",
@@ -148,6 +152,13 @@
     "ws": "^8.11.0"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --cache --fix",
+      "git add"
+    ],
+    "package.json": [
+      "npm run format",
+      "git add"
+    ]
   }
 }
