--- a/.env
+++ b/.env
@@ -8,4 +8,5 @@ NEXT_PUBLIC_APP_PORT=3000
 NEXT_PUBLIC_APP_INSTANCE=localhost
 NEXT_PUBLIC_APP_ENV=development
 NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL='ws'
-NEXT_PUBLIC_BASE_API=http://34.147.245.212:4000
+NEXT_PUBLIC_BASE_API=http://34.105.254.233:4000
+NEXT_PUBLIC_ASSET_ID=ETH_TEST5
